@@ -24,6 +24,12 @@ Summary of important user-visible changes for version 6 (yyyy-mm-dd):
   'A-F' instead.  The previous uppercase formats, `E` and `G`, no longer
   control the case of the output.
 
+- New warnings have been added about questionable uses of the colon ':'
+  range operator.  Each has a new warning ID so that it can be disabled
+  if desired.
+    Octave:colon-complex-argument   : when any arg is complex
+    Octave:colon-nonscalar-argument : when any arg is non-scalar
+  
 #### Graphics backend
 
 - Graphic primitives now accept a color property value of `"none"`
